card rotate transition!

--- a/global/global-vars.less
+++ b/global/global-vars.less
@@ -25,4 +25,5 @@
 @txt-dark: @grey-darkest;
 @txt-light: @grey-lightest;
 
+@card-front-bg: #E6ECF2; // @grey-lightest
 @card-back-bg: #FDFFC0; // #FFFFE4
