rewrite screen layout

--- a/global/global-vars.less
+++ b/global/global-vars.less
@@ -1,8 +1,13 @@
 
 @max-mobile-width: 600px;
 
-@margin: 0.5rem;
+@left-nav-width: 14.5rem;
+@top-nav-height: 2rem;
+
+
+@mid-space: 0.5rem;
 @border-radius: 5px;
+
 
 @shadow-color1: rgba(0, 0, 0, .8);
 @shadow-color2: rgba(0, 0, 0, .25);
@@ -16,10 +21,10 @@
 
 @white: #fff;
 @grey-lightest: rgb(240, 241, 242);
-@grey-lighter: rgba(0, 0, 0, 0.25);
-@grey-light: rgba(0, 0, 0, 0.45);
-@grey-dark: rgba(0, 0, 0, 0.6);
-@grey-darkest: rgba(0, 0, 0, 0.9);
+@grey-lighter: #D9DADB;
+@grey-light: #AEAFB0;
+@grey-dark: #767778;
+@grey-darkest: #232323;
 @black: #000;
 
 @txt-dark: @grey-darkest;
