--- a/global/vars.less
+++ b/global/vars.less
@@ -2,7 +2,8 @@
 @max-mobile-width: 600px;
 
 @left-nav-width: 13%;
-@top-nav-height: 2rem;
+@top-nav-height: 5rem;
+@top-nav-height-mobile: 2rem;
 
 
 @mid-space: 0.5rem;
