--- a/global/vars.less
+++ b/global/vars.less
@@ -20,6 +20,16 @@
 @shadow3: 0 0 24px 0 @shadow-color1;
 
 
+
+@white: #faf6ff;
+@grey-lightest: #efe2ff;
+@grey-lighter: #e0c5ff;
+@grey-light: #c28eff;
+@grey-dark: #956dc4;
+@grey-darkest: #624780;
+@black: #0d0911;
+
+/*
 @white: #fff;
 @grey-lightest: rgb(240, 241, 242);
 @grey-lighter: #D9DADB;
@@ -27,6 +37,7 @@
 @grey-dark: #767778;
 @grey-darkest: #232323;
 @black: #000;
+*/
 
 @txt-dark: @grey-darkest;
 @txt-light: @grey-lightest;
