--- a/global/vars.less
+++ b/global/vars.less
@@ -22,8 +22,8 @@
 
 
 @white: #faf6ff;
-@grey-lightest: #efe2ff;
-@grey-lighter: #e0c5ff;
+@grey-lightest: #f6eeff;
+@grey-lighter: #efe2ff; // #e0c5ff;
 @grey-light: #c28eff;
 @grey-dark: #956dc4;
 @grey-darkest: #624780;
@@ -42,5 +42,5 @@
 @txt-dark: @grey-darkest;
 @txt-light: @grey-lightest;
 
-@card-front-bg: #E6ECF2; // @grey-lightest
+@card-front-bg: #ececea; // @grey-lightest
 @card-back-bg: #FDFFC0; // #FFFFE4
