--- a/global/vars.less
+++ b/global/vars.less
@@ -20,7 +20,17 @@
 @shadow3: 0 0 24px 0 @shadow-color1;
 
 
+// Gray Purple
+@white: #faf6ff;
+@grey-lightest: #eeedf6;
+@grey-lighter: #e2e1f0;
+@grey-light: #b9b1c2;
+@grey-dark: #80758c;
+@grey-darkest: #463d4f;
+@black: #0d0911;
 
+/*
+// Calm Purple
 @white: #faf6ff;
 @grey-lightest: #f6eeff;
 @grey-lighter: #efe2ff; // #e0c5ff;
@@ -28,8 +38,10 @@
 @grey-dark: #956dc4;
 @grey-darkest: #624780;
 @black: #0d0911;
+ */
 
 /*
+// Real Grey:
 @white: #fff;
 @grey-lightest: rgb(240, 241, 242);
 @grey-lighter: #D9DADB;
@@ -39,8 +51,8 @@
 @black: #000;
 */
 
-@txt-dark: @grey-darkest;
-@txt-light: @grey-lightest;
+@txt-dark: @black;
+@txt-light: @white;
 
 @card-front-bg: #ececea; // @grey-lightest
 @card-back-bg: #FDFFC0; // #FFFFE4
