--- a/global/vars.less
+++ b/global/vars.less
@@ -21,9 +21,9 @@
 
 
 // Gray Purple
-@white: #faf6ff;
+@white: #fcfcff;
 @grey-lightest: #eeedf6;
-@grey-lighter: #e2e1f0;
+@grey-lighter: #e0e4ef;
 @grey-light: #b9b1c2;
 @grey-dark: #80758c;
 @grey-darkest: #463d4f;
@@ -50,6 +50,9 @@
 @grey-darkest: #232323;
 @black: #000;
 */
+
+@body-bg: @grey-lightest;
+@banners-bg: @grey-lighter;
 
 @txt-dark: @black;
 @txt-light: @white;
