sucess btns + styling

--- a/global/vars.less
+++ b/global/vars.less
@@ -59,3 +59,8 @@
 
 @card-front-bg: #ececea; // @grey-lightest
 @card-back-bg: #FDFFC0; // #FFFFE4
+
+
+@success-btn-width: 145px;
+@success-btn-height: 60px;
+
