--- a/global/vars.less
+++ b/global/vars.less
@@ -22,7 +22,7 @@
 
 // Gray Purple
 @white: #fcfcff;
-@grey-lightest: #eeedf6;
+@grey-lightest: #efeef2; // #eeedf6;
 @grey-lighter: #e0e4ef;
 @grey-light: #b9b1c2;
 @grey-dark: #80758c;
