practice success buttons icons

--- a/global/vars.less
+++ b/global/vars.less
@@ -64,3 +64,9 @@
 @success-btn-width: 145px;
 @success-btn-height: 60px;
 
+@right-btn-light: #bfe2c3;
+@right-btn-dark: #66c85b;
+@wrong-btn-light: #edb8b7;
+@wrong-btn-dark: #e25050;
+@success-btn-border-color: #979797;
+
