--- a/global/vars.less
+++ b/global/vars.less
@@ -64,9 +64,9 @@
 @success-btn-width: 145px;
 @success-btn-height: 60px;
 
-@right-btn-light: #bfe2c3;
-@right-btn-dark: #66c85b;
-@wrong-btn-light: #edb8b7;
+@right-btn-light: #94FF94;
+@right-btn-dark: #55A255;
+@wrong-btn-light: #fac3d3;
 @wrong-btn-dark: #e25050;
 @success-btn-border-color: #979797;
 
