practice success cards buttons styling.

--- a/global/vars.less
+++ b/global/vars.less
@@ -67,6 +67,6 @@
 @right-btn-light: #94FF94;
 @right-btn-dark: #55A255;
 @wrong-btn-light: #fac3d3;
-@wrong-btn-dark: #e25050;
+@wrong-btn-dark: #e23232; // #e22323; // #e25050;
 @success-btn-border-color: #979797;
 
