--- a/global/vars.less
+++ b/global/vars.less
@@ -57,9 +57,10 @@
 @txt-dark: @black;
 @txt-light: @white;
 
+
+@card-size: 324px;
 @card-front-bg: #ececea; // @grey-lightest
 @card-back-bg: #FDFFC0; // #FFFFE4
-
 
 @success-btn-width: 145px;
 @success-btn-height: 60px;
